# gpt-optimal

./: .gitignore  README.md  benchmark.sh  readme.md
benchmark_results/: benchmark_20260124_155610.json  benchmark_20260124_165503.json  benchmark_20260124_172041.json  benchmark_20260124_193343.json  benchmark_20260124_195704.json  benchmark_history.csv
gpt2-python/: gpt2.py  pyproject.toml
gpt2-rust/: Cargo.toml
gpt2-rust/src/: amp.rs  attention.rs  config.rs  dataset.rs  main.rs  model.rs  training.rs
hyperparams/: config.json
rust-gpt/: Cargo.toml  README.md
rust-gpt/src/: lib.rs  main.rs  tokenizer.rs
rust-gpt/src/eval/: generator.rs  metrics.rs  mod.rs
rust-gpt/src/model/: config.rs  mod.rs  transformer.rs
rust-gpt/src/random/: main.rs
rust-gpt/src/training/: config.rs  learner.rs  mod.rs  runner.rs
rust-gpt/src/visualization/: dashboard.rs  mod.rs  plots.rs
rust-gpt/utils/: download_nemotron.py  prepare_tokenizer.py  pyproject.toml  requirements.txt
src/: burn_mlp.rs  custom_mlp.rs  lib.rs  main.rs  tokenizer.rs
src/eval/: generator.rs  metrics.rs  mod.rs
src/model/: attention.rs  config.rs  gpt2.rs  mod.rs  transformer.rs
src/training/: learner.rs
src/visualization/: dashboard.rs  mod.rs  plots.rs
torch-gpt/: main.py  pyproject.toml
upgrades/: CHANGELOG.md
utils/: download_nemotron.py  prepare_tokenizer.py  requirements.txt
