[package]
name = "gpt2-rust"
version = "0.1.0"
edition = "2021"

[features]
default = ["cuda", "amp"]
# GPU backend:
cuda = ["burn/cuda", "burn/fusion", "burn/autotune"]
# CPU backend:
ndarray = ["burn/ndarray"]
# Automatic Mixed Precision (uses f16 for forward/backward, f32 for optimizer):
amp = []

[dependencies]
burn = { version = "0.20", default-features = false, features = ["train"] }
half = "2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"

[profile.dev]
opt-level = 1  # Slightly optimize even in dev for faster iteration
