[package]
name = "gpt2-rust"
version = "0.1.0"
edition = "2024"
description = "GPT-2 implementation in Rust using Burn with custom Flash Attention and AMP"

[features]
default = ["cuda"]
cuda = ["burn-cuda"]
cpu = []
amp = []  # Enable AMP (Automatic Mixed Precision) - always available with our custom implementation

[dependencies]
burn = { version = "0.20", features = ["train", "autodiff", "fusion"] }
burn-cuda = { version = "0.20", optional = true }
burn-ndarray = { version = "0.20", features = ["std"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Random number generation
rand = "0.8"
rand_distr = "0.4"

# Utilities
anyhow = "1.0"
indicatif = "0.17"

[[bin]]
name = "gpt2-rust"
path = "src/main.rs"
